# polymarket-bot

./: .gitignore  README.md  full_exit_bot_v2.py  paper_bot.py  paper_trading_log.csv  plot_results.py  requirements.txt  reverse_paper_bot.py
archive_models/: full_exit_bot_v1.py  main_bot.py  paper_bot.py
logs/: full_exit_experiment_log_v1.csv  full_exit_experiment_log_v2.csv  paper_trading_log.csv  reversion_experiment_log.csv
orderflow_engine/: Cargo.toml
orderflow_engine/src/: main.rs
research/: analyzer.py  plot_results.py  test_binance_ws.py
